# cpp-mongo-migrate

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  migration.hpp  vcpkg.json
migrations/: Migration_1.cpp
